# etcher

./: .cop.etcher.private.proj.yml  .copier-projects-answers.yml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  404.html  CONTRIBUTING.md  README.md  etch.config.toml  etch.config.yml  etcher.code-workspace  index.html  mkdocs.yml  objects.inv  pre-commit-hooks.yaml  python_autodoc.py  setup.cfg  setup.etch.cfg  sitemap.xml
.github/actions/install-pre-commit/: action.yml
.github/workflows/: release.yml  tests.yml  whos-changed.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
dev_scripts/: copier_project.sh  docs.sh  initial_setup.sh  pkg.sh  py_rust.sh  test.sh
docs/: index.md  pyproject.toml  python_autodoc.py
etches/: CONTRIBUTING.md  README.md
py/: README.etch.md  pyproject.toml
py/etcher/: __init__.py  _config.py  _process.py  main.py
py/tests/: test_cli.py  test_process.py  tmp_file_manager.py
py_ref/: index.html
py_ref/SUMMARY/: index.html
py_ref/main/: index.html
py_rust/: Cargo.toml  pyproject.toml
py_rust/python/etcher/: __init__.py  __init__.pyi  _config.py  _process.py  main.py
py_rust/src/: args.rs  init.rs  lib.rs  run.rs
py_rust/src/config/: coerce.rs  engine.rs  mod.rs  process.rs  raw_conf.rs  schema.json  validate.rs
py_rust/src/render/: args_validate.rs  lockfile.rs  mod.rs  walker.rs
py_rust/src/utils/: toml.rs
py_rust/tests/: test_config_invalid.py  test_config_valid.py  test_process.py
py_rust/tests/helpers/: cli.py  tmp_file_manager.py  types.py  utils.py
py_rust/tests/init/: test_init.py
py_rust/tests/render/: test_custom_extensions.py  test_engine.py  test_extra_builtins.py  test_identification.py  test_lockfile.py
py_rust/tests/version/: test_version.py
py_rust_ref/: index.html
py_rust_ref/SUMMARY/: index.html
py_rust_ref/main/: index.html
py_rust_ref/utils/: index.html
python/: README.md  pyproject.toml  ruff.toml
python/etcher/: __init__.py  _config.py  _process.py  main.py
python/tests/: test_cli.py  test_process.py  tmp_file_manager.py
search/: search_index.json
stylesheets/: extra.css
