[dependencies]

[dependencies.pyo3]
features = ['extension-module']
version = '0.20.0'

[lib]
crate-type = ['cdylib']
name = 'etcher'
path = 'src/lib.rs'

[package]
edition = '2021'
license = 'MIT'
name = 'etcher'
publish = false
readme = 'README.md'
version = '0.0.14'

[profile]

[profile.profiler]
debug = true
incremental = true
inherits = 'release'
strip = false

[profile.test]
inherits = 'release'
