[dependencies]
colored = "2.0.4"
log = "0.4.20"
once_cell = "1.18.0"
chrono = "0.4.31"
clap = {version = "4.4.11", features = ["derive", "string"]}
toml = "0.8.8"
serde = {version = "1.0.193", features = ["derive", "rc"]}
serde_json = "1.0.108"
pythonize = "0.20.0"
json-patch = "1.2.0"
valico = "4.0.0"
regex = "1.10.2"
ignore = "0.4.21"
minijinja = {version = "1.0.10", features = ["loader", "custom_syntax", "preserve_order", "json", "urlencode"]}
minijinja-contrib = {version = "1.0.10", features = ["datetime"]}
parking_lot = {version = "0.12.1", features = [
  "nightly",
  "deadlock_detection",
  "serde",
]}
bitbazaar = {version = "0.0.3", features = ["pyo3"]}

[dependencies.pyo3]
features = ['extension-module', 'chrono']
version = '0.20.0'

[lib]
crate-type = ['cdylib']
name = 'etcher'
path = 'src/lib.rs'

[package]
edition = '2021'
license = 'MIT'
name = 'etcher'
publish = false
readme = 'README.md'
version = '0.0.15'

[profile]

[profile.profiler]
debug = true
incremental = true
inherits = 'release'
strip = false

[profile.test]
inherits = 'release'
